Added DAO and REPO and UI