@@ -62,9 +62,75 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
-                <configuration>
-                    <mainClass>com.redheads.arla.App</mainClass>
-                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-cli</id>
+                        <configuration>
+                            <options>
+                                <option>--add-opens</option>
+                                <option>java.base/java.lang.reflect=com.jfoenix</option>
+                                <option>--add-opens</option>
+                                <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
+                                <option>--add-exports</option>
+                                <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                                <option>--add-exports</option>
+                                <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                                <option>--add-exports</option>
+                                <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+                                <option>--add-exports</option>
+                                <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+                                <option>--add-exports</option>
+                                <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                            </options>
+                            <mainClass>com.redheads.arla.App</mainClass>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>debug</id>
+                        <configuration>
+                            <options>
+                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005</option>
+                                <option>--add-opens</option>
+                                <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                                <option>--add-opens</option>
+                                <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
+                                <option>--add-exports</option>
+                                <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                                <option>--add-exports</option>
+                                <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                                <option>--add-exports</option>
+                                <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+                                <option>--add-exports</option>
+                                <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+                                <option>--add-exports</option>
+                                <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                            </options>
+                            <mainClass>com.redheads.arla.App</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
